# vHSM

./: .gitignore  README.md  errormsg.txt
Backend_Full code/vHSM_Backend/: 250902_combined_app  imx219.sh
Backend_Full code/vHSM_Backend/Internal_crypto_module/: crypto_module_250806_1304  entropy.txt
Backend_Full code/vHSM_Backend/Measuring_for_Speed/: a.out  bench  crypto.h  extracted_bits.txt  image_sensor_drive  main_bench.c  module_mod  module_mod.cpp
Backend_Full code/vHSM_Backend/mldsa_crypto/: mldsa_auth.cpp
Backend_Full code/vHSM_Backend/old_version_crypto/: key_handle_added
Backend_Full code/vHSM_Backend/rsa_keygen/: RSA_Prime_Number_Generation_Resistance.c  rsa_keygen_250805_1253  rsa_keygen_250805_1307  rsa_keygen_25082  rsa_keygen_250826  rsa_keygen_250827_generate_the_RSAkey  rsa_public.pem
Backend_encryption code/: extracted_bits.txt  image_sensor_drive.c  module_mod.cpp
esp32_is/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
esp32_is/main/: CMakeLists.txt  aes_crypto.c  crypto.c  crypto.h  idf_component.yml  image_capture.c  main.c  sdcard_storage.c  sdcard_storage.h
etc/: errormsg.txt  gpio_control.py
etc/Backend_Full code/vHSM_Backend/: 250930_combined_app  combined_app  individually bit extractor.cpp
etc/Backend_encryption code/: modify.c
ver2_only frontend/: CMakeLists.txt
ver2_only frontend/qml/components/: AppTextField.qml
ver2_only frontend/qml/pages/: ConnectLoadingPage.qml  ConnectPage.qml
ver2_only frontend/qml/styles/: Theme.qml
ver2_only frontend/src/controllers/: AppController.cpp  AppController.h
ver2_only frontend/src/models/: AppState.cpp  AppState.h
ver3_backend comm_demo/3.10_keygen_and_transmit/: CMakeLists.txt
ver3_backend comm_demo/3.10_keygen_and_transmit/pi_backend-v4/mldsa_crypto/: mldsa_auth.cpp
ver3_backend comm_demo/3.10_keygen_and_transmit/qml/styles/: Theme.qml
ver3_backend comm_demo/3.10_keygen_and_transmit/src/controllers/: AppController.cpp
ver3_backend comm_demo/3.10_keygen_and_transmit/src/models/: AppState.cpp
ver3_backend comm_demo/3.10_keygen_and_transmit/src/services/: PiGatewayService.cpp
ver3_backend comm_demo/3.10_keygen_and_transmit/src/utils/: FileUtils.h
ver3_backend comm_demo/3.11_mutual_auithentication/pi_backend-v5/: tcp_server.py
ver3_backend comm_demo/3.12_errormessage_fix/qml/: Main.qml
ver3_backend comm_demo/3.14_virtual_hsm_keynumber_updated_fix1/: resources.qrc
ver3_backend comm_demo/3.14_virtual_hsm_keynumber_updated_fix1/pi_backend-v5/: tcp_server.py
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/: CMakeLists.txt  main.cpp
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/pi_backend-v5/: tcp_server.py
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/pi_backend-v5/mldsa_crypto/: mldsa_keygen.cpp
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/qml/: Main.qml
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/qml/components/: AppHeader.qml
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/qml/pages/: ConnectPage.qml
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/src/controllers/: AppController.h
ver3_backend comm_demo/3.15_vhsm_key_arduino_backend_bundle/src/models/: AppState.cpp
ver3_backend comm_demo/3.1_Frontend_log/: README.md
ver3_backend comm_demo/3.2_Backend_added/: CMakeLists.txt  main.cpp
ver3_backend comm_demo/3.3_vhsm_pi_lxterminal_clean_loading/: README.md
ver3_backend comm_demo/3.3_vhsm_pi_lxterminal_clean_loading/pi_backend/: pi_gateway.py
ver3_backend comm_demo/3.4_vhsm_tcp_connected/: README.md
ver3_backend comm_demo/3.5_vhsm_tailscale_ready/: CMakeLists.txt
ver3_backend comm_demo/3.6_vhsm_backfix/pi_backend/: tcp_server.py
ver3_backend comm_demo/3.6_vhsm_backfix/qml/: Main.qml
ver3_backend comm_demo/3.7_modified_vhsm_mldsa/pi_backend/: tcp_server.py
ver3_backend comm_demo/3.8_virtualhsm_backend_error_to_terminal/: README.md
ver3_backend comm_demo/3.9_keygen_and_transmit/: resources.qrc
ver3_backend comm_demo/3.9_keygen_and_transmit/pi_backend-v4/: tcp_server.py
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly/: resources.qrc
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/: CMakeLists.txt
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/pi_backend-v6/: tcp_server.py
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/pi_backend-v6/mldsa_crypto/: mldsa_keygen_full.cpp
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/qml/: Main.qml
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/qml/pages/: ConnectPage.qml  FindIdPage.qml  WorkLoadingPage.qml
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/src/controllers/: AppController.cpp
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/src/services/: AuthService.cpp
ver4_backend_auth/4.4_vhsm_IDPW_authentication_frontendonly_executable/src/utils/: FileUtils.cpp
ver4_backend_auth/4.9_vhsm_encryption_demo_executable/: command.txt  resources.qrc
(+181 files in other folders)
